--- a/API/API/Web.config
+++ b/API/API/Web.config
@@ -7,8 +7,8 @@
   <configSections>
     <section name="loggingConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.LoggingSettings, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" requirePermission="true" />
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  </configSections>
+    
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <loggingConfiguration name="" tracingEnabled="true" defaultCategory="General">
     <listeners>
       <add name="Event Log Listener" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FormattedEventLogTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FormattedEventLogTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" source="yieldtome" formatter="Text Formatter" log="yieldtome" machineName="." traceOutputOptions="LogicalOperationStack, DateTime, Timestamp, Callstack" asynchronous="true" />
@@ -51,6 +51,8 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="IsAuthEnabled" value="true" />
+    <add key="FacebookAppId" value="233412823470428" />
+    <add key="FacebookAppSecret" value="1b4c5b98227ed31e80975e69254fcc41" />
     <add key="ModulePaths" value="Modules" />
     <add key="ModulesToInclude" value="yieldtome.API.Data.Services.EventService;yieldtome.API.Data.Services.AttendeeService;yieldtome.API.Data.Services.APIKeyService;yieldtome.API.Data.Services.ProfileService;yieldtome.API.Data.Services.SpeakersListService;yieldtome.API.Data.Services.SpeakersService;yieldtome.API.Data.Services.PollService;yieldtome.API.Data.Services.VoteService;yieldtome.API.RequestProcessor.BaseProcessor;yieldtome.API.RequestProcessor.AttendProcessor" />
   </appSettings>
@@ -162,6 +164,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.1.0.0" newVersion="2.1.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
