--- a/API/API/API.csproj
+++ b/API/API/API.csproj
@@ -198,6 +198,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AuthenticateController.cs" />
+    <Compile Include="CORSHandler.cs" />
     <Compile Include="SecureAttribute.cs" />
     <Compile Include="Providers\BearerAuthenticationProvider.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
