--- a/Web/bower.json
+++ b/Web/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "angular-seed",
-  "description": "A starter project for AngularJS",
+  "name": "yieldtome-web",
+  "description": "An Angular-js application allowing users to participate in Model UN conferences",
   "version": "0.0.0",
-  "homepage": "https://github.com/angular/angular-seed",
+  "homepage": "https://github.com/bradleyscott/yieldtome",
   "license": "MIT",
   "private": true,
   "dependencies": {
@@ -11,6 +11,7 @@
     "angular-loader": "1.2.x",
     "angular-mocks": "~1.2.15",
     "bootstrap": "~3.1.1",
-    "angular-resource": "~1.2.15"
+    "angular-resource": "~1.2.15",
+    "angular-facebook": "~0.2.2"
   }
 }
