--- a/API/API/packages.config
+++ b/API/API/packages.config
@@ -6,6 +6,7 @@
   <package id="jQuery" version="2.1.0" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.10.4" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Cors" version="5.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.0.0" targetFramework="net45" />
@@ -18,6 +19,7 @@
   <package id="Microsoft.AspNet.WebApi" version="5.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.OData" version="5.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.1.2" targetFramework="net45" />
@@ -32,6 +34,7 @@
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.1.1" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.2.18" targetFramework="net45" />
   <package id="Microsoft.Owin" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Cors" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.Cookies" version="2.1.0" targetFramework="net45" />
