--- a/Web/bower.json
+++ b/Web/bower.json
@@ -12,6 +12,8 @@
     "angular-mocks": "~1.2.15",
     "bootstrap": "~3.1.1",
     "angular-resource": "~1.2.15",
-    "angular-facebook": "~0.2.2"
+    "angular-facebook": "~0.2.2",
+    "angular-ui": "~0.4.0",
+    "angular-bootstrap": "~0.11.0"
   }
 }
