--- a/Web/bower.json
+++ b/Web/bower.json
@@ -13,7 +13,9 @@
     "bootstrap": "~3.1.1",
     "angular-resource": "~1.2.15",
     "angular-facebook": "~0.2.2",
-    "angular-ui": "~0.4.0",
-    "angular-bootstrap": "~0.11.0"
+    "angular-bootstrap": "~0.11.0",
+    "jquery-ui": "~1.10.4",
+    "jquery-ui-touch-punch": "*",
+    "angular-ui-sortable": "~0.12.8"
   }
 }
