--- a/Web/package.json
+++ b/Web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yieldtome-web",
+  "name": "yieldtome",
   "description": "An Angular-js application allowing users to participate in Model UN conferences",
   "version": "0.0.0",
   "homepage": "https://github.com/bradleyscott/yieldtome",
@@ -11,7 +11,14 @@
     "http-server": "^0.6.1",
     "bower": "^1.3.1",
     "shelljs": "^0.2.6",
-    "karma-ng-html2js-preprocessor": "^0.1.0"
+    "karma-ng-html2js-preprocessor": "^0.1.0",
+    "grunt-contrib-uglify": "^0.5.0",
+    "grunt-contrib-concat": "^0.4.0",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-contrib-qunit": "^0.5.2",
+    "grunt-contrib-copy": "^0.5.0",
+    "grunt-text-replace": "^0.3.12"
   },
   "scripts": {
     "postinstall": "bower install",
