--- a/Web/bower.json
+++ b/Web/bower.json
@@ -12,12 +12,12 @@
     "angular-mocks": "~1.2.15",
     "bootstrap": "~3.1.1",
     "angular-resource": "~1.2.15",
-    "angular-facebook": "~0.2.2",
     "angular-bootstrap": "~0.11.0",
     "jquery-ui": "~1.10.4",
     "jquery-ui-touch-punch": "*",
     "angular-ui-sortable": "~0.12.8",
     "angular-touch": "~1.2.19",
-    "angular-loading-bar": "~0.4.3"
+    "angular-loading-bar": "~0.4.3",
+    "ng-facebook": "~0.1.3"
   }
 }
