--- a/Web/app/index.html.dist
+++ b/Web/app/index.html.dist
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/loading-bar.min.css" />
+    <link rel="stylesheet" href="css/angular-growl.min.css" />
 </head>
 
 <body>
@@ -34,6 +35,8 @@
     <script src="js/ui-bootstrap-tpls.min.js"></script>
     <script src="js/sortable.min.js"></script>
     <script src="js/loading-bar.min.js"></script>
+    <script src="js/angular-animate.min.js"></script>
+    <script src="js/angular-growl.min.js"></script>
 
     <!-- Load yieldto.me App -->
     <script src="js/yieldtome.min.js"></script>
