--- a/API/API.Data.Tests/App.config
+++ b/API/API.Data.Tests/App.config
@@ -38,7 +38,7 @@
     </specialSources>
   </loggingConfiguration>
   <connectionStrings>
-    <add name="Database" connectionString="Server=B-ASPIRE;Database=yieldtome;Trusted_Connection=true;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
+    <add name="Database" connectionString="Server=B-ASPIRE;Database=yieldtome-test;Trusted_Connection=true;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
