--- a/Web/app/index.html.dist
+++ b/Web/app/index.html.dist
@@ -41,6 +41,7 @@
     <script src="js/angular.min.js"></script>
     <script src="js/angular-resource.min.js"></script>
     <script src="js/angular-route.min.js"></script>
+    <script src="js/angular-cookies.min.js"></script>
     <script src="js/angular-touch.min.js"></script>
     <script src="js/ngFacebook.js"></script>
     <script src="js/ui-bootstrap-tpls.min.js"></script>
