--- a/Web/bower.json
+++ b/Web/bower.json
@@ -20,6 +20,7 @@
     "angular-loading-bar": "~0.4.3",
     "ng-facebook": "~0.1.3",
     "angular-growl": "~0.4.0",
-    "angular-animate": "~1.2.21"
+    "angular-animate": "~1.2.21",
+    "angular-cookies": "~1.2.23"
   }
 }
