Added Like API capability

--- a/API/API.Data.Tests/App.config
+++ b/API/API.Data.Tests/App.config
@@ -38,7 +38,7 @@
     </specialSources>
   </loggingConfiguration>
   <connectionStrings>
-    <add name="Database" connectionString="Server=B-ASPIRE;Database=yieldtome-test;Trusted_Connection=true;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
+    <add name="Database" connectionString="Server=B-ASPIRE;Database=yieldtome_test;Trusted_Connection=true;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -48,7 +48,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="IsBasicAuthEnabled" value="true" />
     <add key="ModulePaths" value="../../Modules" />
-    <add key="ModulesToInclude" value="yieldtome.API.Data.Services.EventService;yieldtome.API.Data.Services.AttendeeService;yieldtome.API.Data.Services.APIKeyService;yieldtome.API.Data.Services.ProfileService;yieldtome.API.Data.Services.SpeakersListService;yieldtome.API.Data.Services.SpeakersService;yieldtome.API.Data.Services.PollService;yieldtome.API.Data.Services.VoteService" />
+    <add key="ModulesToInclude" value="yieldtome.API.Data.Services.EventService;yieldtome.API.Data.Services.AttendeeService;yieldtome.API.Data.Services.APIKeyService;yieldtome.API.Data.Services.ProfileService;yieldtome.API.Data.Services.SpeakersListService;yieldtome.API.Data.Services.SpeakersService;yieldtome.API.Data.Services.PollService;yieldtome.API.Data.Services.VoteService;yieldtome.API.Data.Services.LikeService" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
