--- a/API/API.Data.Tests/API.Data.Tests.csproj
+++ b/API/API.Data.Tests/API.Data.Tests.csproj
@@ -70,6 +70,7 @@
     <Compile Include="SpeakersListServiceTests.cs" />
     <Compile Include="SpeakersServiceTests.cs" />
     <Compile Include="PollServiceTests.cs" />
+    <Compile Include="LikeServiceTests.cs" />
     <Compile Include="VoteServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
