--- a/API/API/Web.config
+++ b/API/API/Web.config
@@ -51,7 +51,7 @@
     <add key="FacebookAppId" value="233412823470428" />
     <add key="FacebookAppSecret" value="1b4c5b98227ed31e80975e69254fcc41" />
     <add key="ModulePaths" value="Modules" />
-    <add key="ModulesToInclude" value="yieldtome.API.Data.Services.EventService;yieldtome.API.Data.Services.AttendeeService;yieldtome.API.Data.Services.APIKeyService;yieldtome.API.Data.Services.ProfileService;yieldtome.API.Data.Services.SpeakersListService;yieldtome.API.Data.Services.SpeakersService;yieldtome.API.Data.Services.PollService;yieldtome.API.Data.Services.VoteService;yieldtome.API.RequestProcessor.BaseProcessor;yieldtome.API.RequestProcessor.AttendProcessor" />
+    <add key="ModulesToInclude" value="yieldtome.API.Data.Services.EventService;yieldtome.API.Data.Services.AttendeeService;yieldtome.API.Data.Services.APIKeyService;yieldtome.API.Data.Services.ProfileService;yieldtome.API.Data.Services.SpeakersListService;yieldtome.API.Data.Services.SpeakersService;yieldtome.API.Data.Services.PollService;yieldtome.API.Data.Services.VoteService;yieldtome.API.Data.Services.LikeService" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
