--- a/Web/app/index.html.dist
+++ b/Web/app/index.html.dist
@@ -49,9 +49,28 @@
     <script src="js/loading-bar.min.js"></script>
     <script src="js/angular-animate.min.js"></script>
     <script src="js/angular-growl.min.js"></script>
+    <script src="js/angulartics.min.js"></script>
+    <script src="js/angulartics-ga.min.js"></script>
 
     <!-- Load yieldto.me App -->
     <script src="js/yieldtome.min.js"></script>
+    
+    <!-- Analytics tracking -->
+    <script>
+    (function(i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function() {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-40823396-1', 'auto');
+    </script>
 </body>
 
 </html>
