--- a/API/API/API.csproj
+++ b/API/API/API.csproj
@@ -208,10 +208,10 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AuthenticateController.cs" />
     <Compile Include="Controllers\LikesController.cs" />
-    <Compile Include="CORSHandler.cs" />
+    <Compile Include="Controllers\PostmanController.cs" />
+    <Compile Include="Models\PostmanCollection.cs" />
+    <Compile Include="Models\PostmanRequest.cs" />
     <Compile Include="SecureAttribute.cs" />
-    <Compile Include="Providers\BearerAuthenticationProvider.cs" />
-    <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Areas\HelpPage\ApiDescriptionExtensions.cs" />
@@ -255,7 +255,6 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="App_Start\Startup.Auth.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\HelpPage\HelpPage.css" />
@@ -344,8 +343,9 @@
     <Content Include="Areas\HelpPage\Views\Help\Api.cshtml" />
     <Content Include="Areas\HelpPage\Views\_ViewStart.cshtml" />
     <None Include="Properties\PublishProfiles\Amazon EC2 Test - FTP.pubxml" />
-    <None Include="Properties\PublishProfiles\Azure - FTP.pubxml" />
-    <None Include="Properties\PublishProfiles\Azure - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\Azure Web Deploy - Test.pubxml" />
+    <None Include="Properties\PublishProfiles\yieldtome-api-test - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\yieldtome-api-test - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-2.1.0.intellisense.js" />
     <Content Include="Scripts\jquery-2.1.0.js" />
     <Content Include="Scripts\jquery-2.1.0.min.js" />
@@ -392,7 +392,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
