--- a/Web/app/index.html.dist
+++ b/Web/app/index.html.dist
@@ -43,7 +43,7 @@
     <script src="js/angular-route.min.js"></script>
     <script src="js/angular-cookies.min.js"></script>
     <script src="js/angular-touch.min.js"></script>
-    <script src="js/ngFacebook.js"></script>
+    <script src="js/satellizer.min.js"></script>    
     <script src="js/ui-bootstrap-tpls.min.js"></script>
     <script src="js/sortable.min.js"></script>
     <script src="js/loading-bar.min.js"></script>
