--- a/Web/bower.json
+++ b/Web/bower.json
@@ -21,6 +21,7 @@
     "ng-facebook": "~0.1.3",
     "angular-growl": "~0.4.0",
     "angular-animate": "~1.2.21",
-    "angular-cookies": "~1.2.23"
+    "angular-cookies": "~1.2.23",
+    "satellizer": "~0.6.2"
   }
 }
