--- a/API/API/Web.config
+++ b/API/API/Web.config
@@ -36,10 +36,7 @@
     </specialSources>
   </loggingConfiguration>
   <connectionStrings>
-    <!--MS SQL connection string-->
     <add name="Database" connectionString="Server=B-ASPIRE;Database=yieldtome;Trusted_Connection=true;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
-    <!--MySQL connection string-->
-    <!--<add name="MyContext" providerName="MySql.Data.MySqlClient" connectionString="server=localhost;port=3306;database=mycontext;uid=root;password=********"/>-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -50,8 +47,9 @@
     <add key="IsAuthEnabled" value="true" />
     <add key="FacebookAppId" value="233412823470428" />
     <add key="FacebookAppSecret" value="1b4c5b98227ed31e80975e69254fcc41" />
+    <add key="GoogleAppSecret" value="KJtRJSceFwWKUJVhQXHRf3SI" />
     <add key="ModulePaths" value="Modules" />
-    <add key="ModulesToInclude" value="yieldtome.API.Data.Services.EventService;yieldtome.API.Data.Services.AttendeeService;yieldtome.API.Data.Services.APIKeyService;yieldtome.API.Data.Services.ProfileService;yieldtome.API.Data.Services.SpeakersListService;yieldtome.API.Data.Services.SpeakersService;yieldtome.API.Data.Services.PollService;yieldtome.API.Data.Services.VoteService;yieldtome.API.Data.Services.LikeService;yieldtome.API.Auth.FacebookAuthenticationService" />
+    <add key="ModulesToInclude" value="yieldtome.API.Data.Services.EventService;yieldtome.API.Data.Services.AttendeeService;yieldtome.API.Data.Services.APIKeyService;yieldtome.API.Data.Services.ProfileService;yieldtome.API.Data.Services.SpeakersListService;yieldtome.API.Data.Services.SpeakersService;yieldtome.API.Data.Services.PollService;yieldtome.API.Data.Services.VoteService;yieldtome.API.Data.Services.LikeService;yieldtome.API.Auth.FacebookAuthenticationService;yieldtome.API.Auth.TwitterAuthenticationService;yieldtome.API.Auth.GoogleAuthenticationService" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
@@ -169,9 +167,16 @@
         <assemblyIdentity name="System.Web.Cors" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.1.0.0" newVersion="5.1.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.3.0.0" newVersion="3.3.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Primitives" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.22.0" newVersion="4.2.22.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <!--MS SQL config-->
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -182,15 +187,4 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <!--My SQL config-->
-  <!--<entityFramework codeConfigurationType="MySql.Data.Entity.MySqlEFConfiguration, MySql.Data.Entity.EF6">
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
-      <parameters>
-        <parameter value="v11.0" />
-      </parameters>
-    </defaultConnectionFactory>
-    <providers>
-      <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices,MySql.Data.Entity.EF6" />
-    </providers>
-  </entityFramework>-->
 </configuration>
