--- a/API/API/packages.config
+++ b/API/API/packages.config
@@ -1,11 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
+  <package id="Autofac" version="3.3.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net45" />
-  <package id="Facebook" version="6.4.2" targetFramework="net45" />
+  <package id="Facebook" version="6.8.0" targetFramework="net45" />
+  <package id="Google.Apis" version="1.9.0" targetFramework="net45" />
+  <package id="Google.Apis.Auth" version="1.9.0" targetFramework="net45" />
+  <package id="Google.Apis.Core" version="1.9.0" targetFramework="net45" />
+  <package id="Google.Apis.Oauth2.v2" version="1.9.0.780" targetFramework="net45" />
+  <package id="Google.Apis.Plus.v1" version="1.9.0.1710" targetFramework="net45" />
   <package id="jQuery" version="2.1.0" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.10.4" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
+  <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Cors" version="5.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.0.0" targetFramework="net45" />
@@ -26,24 +33,27 @@
   <package id="Microsoft.AspNet.WebApi.Tracing" version="5.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.1.1" targetFramework="net45" />
-  <package id="Microsoft.Bcl" version="1.1.6" targetFramework="net45" />
-  <package id="Microsoft.Bcl.Build" version="1.0.13" targetFramework="net45" />
+  <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
   <package id="Microsoft.Data.Edm" version="5.6.0" targetFramework="net45" />
   <package id="Microsoft.Data.OData" version="5.6.0" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.1.1" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.1.1" targetFramework="net45" />
-  <package id="Microsoft.Net.Http" version="2.2.18" targetFramework="net45" />
+  <package id="Microsoft.Net.Http" version="2.2.22" targetFramework="net45" />
   <package id="Microsoft.Owin" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Cors" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.Cookies" version="2.1.0" targetFramework="net45" />
-  <package id="Microsoft.Owin.Security.Facebook" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.OAuth" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.7.1" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="PCLWebUtility" version="1.0.2" targetFramework="net45" />
   <package id="System.Spatial" version="5.6.0" targetFramework="net45" />
+  <package id="TweetinviAPI" version="0.9.3.4" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
+  <package id="Zlib.Portable" version="1.10.0" targetFramework="net45" />
 </packages>
