Implemented Authorization restrictions on Edit and Delete functions

--- a/API/API.Data/API.Data.csproj
+++ b/API/API.Data/API.Data.csproj
@@ -80,6 +80,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AuthorizationHelper.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Objects\Login.cs" />
     <Compile Include="Objects\Like.cs" />
