Updated packages and references

--- a/.gitignore
+++ b/.gitignore
@@ -174,3 +174,5 @@ Modules/
 #Aptana project files
 .project
 Web/yieldtome.sublime-workspace
+Web/yieldtome.sublime-workspace
+Web/yieldtome.sublime-workspace
