New Material UI influenced design

--- a/.gitignore
+++ b/.gitignore
@@ -173,6 +173,6 @@ Modules/
 
 #Aptana project files
 .project
-Web/yieldtome.sublime-workspace
-Web/yieldtome.sublime-workspace
-Web/yieldtome.sublime-workspace
+
+# Sublime Text workspace files
+*sublime-workspace
