--- a/Web/bower.json
+++ b/Web/bower.json
@@ -6,21 +6,22 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "angular": "1.2.x",
-    "angular-route": "1.2.x",
-    "angular-loader": "1.2.x",
-    "angular-mocks": "~1.2.15",
+    "angular": "1.3.x",
+    "angular-route": "1.3.x",
+    "angular-loader": "1.3.x",
+    "angular-mocks": "1.3.x",
     "bootstrap": "~3.1.1",
-    "angular-resource": "~1.2.15",
-    "angular-bootstrap": "~0.11.0",
+    "angular-resource": "1.3.x",
+    "angular-bootstrap": "~0.11.x",
     "jquery-ui": "~1.10.4",
     "jquery-ui-touch-punch": "*",
     "angular-ui-sortable": "~0.12.8",
-    "angular-touch": "~1.2.19",
-    "angular-loading-bar": "~0.4.3",
+    "angular-touch": "1.3.x",
+    "angular-loading-bar": "~0.6.0",
     "angular-growl": "~0.4.0",
-    "angular-animate": "~1.2.21",
-    "angular-cookies": "~1.2.23",
-    "satellizer": "~0.6.2"
+    "angular-animate": "1.3.x",
+    "angular-cookies": "1.3.x",
+    "satellizer": "~0.6.2",
+    "bootstrap-material-design": "~0.1.5"
   }
 }
