--- a/Web/bower.json
+++ b/Web/bower.json
@@ -28,6 +28,7 @@
     "angular-moment": "~0.8.3",
     "moment": "~2.8.4",
     "socket.io-client": "~1.2.1",
-    "sails.io.js": "~0.11.4"
+    "sails.io.js": "~0.11.4",
+    "angular-notification": "~0.2.3"
   }
 }
