--- a/API/API/Web.config
+++ b/API/API/Web.config
@@ -53,6 +53,7 @@
     <add key="FacebookAppId" value="233412823470428" />
     <add key="FacebookAppSecret" value="1b4c5b98227ed31e80975e69254fcc41" />
     <add key="GoogleAppSecret" value="KJtRJSceFwWKUJVhQXHRf3SI" />
+    <add key="ChatServiceUri" value="http://localhost:1337" />
     <add key="ModulePaths" value="Modules" />
   <add key="elmah.mvc.disableHandler" value="false" /><add key="elmah.mvc.disableHandleErrorFilter" value="false" /><add key="elmah.mvc.requiresAuthentication" value="false" /><add key="elmah.mvc.IgnoreDefaultRoute" value="false" /><add key="elmah.mvc.allowedRoles" value="*" /><add key="elmah.mvc.allowedUsers" value="*" /><add key="elmah.mvc.route" value="elmah" /></appSettings>
   <system.web>
