--- a/API/API/Web.Test.config
+++ b/API/API/Web.Test.config
@@ -22,6 +22,7 @@
     <add key="FacebookAppId" value="120213154812744" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
     <add key="FacebookAppSecret" value="9d2b1e09c02fdfcdc0d988331e3bc7a8" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="GoogleAppSecret" value="KJtRJSceFwWKUJVhQXHRf3SI" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+    <add key="ChatServiceUri" value="http://chat-api.yieldto.me:1337" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
   </appSettings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
